{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 974,
  "lineage": "62bdab46-b78f-a6c3-998e-3e590a7bb395",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "n_virginia_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6efe5fa1da42e1a",
            "arn": "arn:aws:ec2:us-east-1:854069375893:elastic-ip/eipalloc-0f6efe5fa1da42e1a",
            "domain": "vpc",
            "id": "eipalloc-0f6efe5fa1da42e1a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-70-190-102.compute-1.amazonaws.com",
            "public_ip": "52.70.190.102",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-us-east-1-prod-nat-eip"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "eipalloc-0f6efe5fa1da42e1a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "oregon_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06adcf3b6b85ec8ed",
            "arn": "arn:aws:ec2:us-west-2:854069375893:elastic-ip/eipalloc-06adcf3b6b85ec8ed",
            "domain": "vpc",
            "id": "eipalloc-06adcf3b6b85ec8ed",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-83-101-108.us-west-2.compute.amazonaws.com",
            "public_ip": "35.83.101.108",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "prod-us-west-2-prod-nat-eip"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "eipalloc-06adcf3b6b85ec8ed",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VRG-EC2-1-private-windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ed0165f19a049904",
            "arn": "arn:aws:ec2:us-east-1:854069375893:instance/i-0adcae27c6b0e6a87",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0adcae27c6b0e6a87",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02e19412770f6ae93"
              }
            ],
            "primary_network_interface_id": "eni-02e19412770f6ae93",
            "private_dns": "ip-10-11-101-142.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.101.142",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bab843902e6b9b6d",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce8b0ae6bb87516f",
            "tags": {
              "Name": "prod-us-east-1-prod-Private-Win"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-Private-Win"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09dd3eaeeaf7ac01d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "i-0adcae27c6b0e6a87",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.oregon-EC2-1-public",
            "aws_security_group.n_virginia_allow_public_rdp_sg",
            "aws_security_group.oregon_allow_public_rdp_sg",
            "aws_subnet.n_virginia-private-subnet",
            "aws_subnet.oregon-public-subnet",
            "aws_vpc.main-vpc",
            "aws_vpc.second-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VRG-EC2-1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ed0165f19a049904",
            "arn": "arn:aws:ec2:us-east-1:854069375893:instance/i-04cfe03eaaf30dece",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04cfe03eaaf30dece",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04c7e965dafdcd7ad"
              }
            ],
            "primary_network_interface_id": "eni-04c7e965dafdcd7ad",
            "private_dns": "ip-10-11-50-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.50.54",
            "public_ip": "44.201.225.15",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b6757c409f93a25",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005cb62d870197420",
            "tags": {
              "Name": "prod-us-east-1-prod-Public-Win"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-Public-Win"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09dd3eaeeaf7ac01d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "i-04cfe03eaaf30dece",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.oregon-EC2-1-public",
            "aws_security_group.n_virginia_allow_public_rdp_sg",
            "aws_security_group.oregon_allow_public_rdp_sg",
            "aws_subnet.n_virginia-public-subnet",
            "aws_subnet.oregon-public-subnet",
            "aws_vpc.main-vpc",
            "aws_vpc.second-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VRG-EC2-2-private-linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f8a61b66d1accaee",
            "arn": "arn:aws:ec2:us-east-1:854069375893:instance/i-08bc9dcd48fc3123e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08bc9dcd48fc3123e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0247006ce687a9ce0"
              }
            ],
            "primary_network_interface_id": "eni-0247006ce687a9ce0",
            "private_dns": "ip-10-11-101-220.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.101.220",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0faf50666ab1f8ca4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce8b0ae6bb87516f",
            "tags": {
              "Name": "prod-us-east-1-prod-Private-Linux"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-Private-Linux"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-042b8872107c6fd7f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "i-08bc9dcd48fc3123e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.n_virginia_nat",
            "aws_internet_gateway.n_virginia_public",
            "aws_nat_gateway.n_virginia_nat",
            "aws_security_group.n_virginia_allow_public_ssh_http_sg",
            "aws_subnet.n_virginia-private-subnet",
            "aws_subnet.n_virginia-public-subnet",
            "aws_vpc.second-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "oregon-EC2-1-private-windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-037613a54b9f6541a",
            "arn": "arn:aws:ec2:us-west-2:854069375893:instance/i-04f70d37ab310e0c6",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f70d37ab310e0c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-west-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c25b3d7d746f1017"
              }
            ],
            "primary_network_interface_id": "eni-0c25b3d7d746f1017",
            "private_dns": "ip-10-10-101-41.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.101.41",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ca0de1deb93ee402",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0024ea3a039b81cd0",
            "tags": {
              "Name": "prod-us-west-2-prod-Private-Win"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-Private-Win"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-03f45e34c8b45803b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "i-04f70d37ab310e0c6",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.oregon_allow_private_rdp_ssh_http_sg",
            "aws_subnet.oregon-private-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "oregon-EC2-1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-037613a54b9f6541a",
            "arn": "arn:aws:ec2:us-west-2:854069375893:instance/i-0ea18fb634a2740d6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea18fb634a2740d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-west-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01f874c213d244522"
              }
            ],
            "primary_network_interface_id": "eni-01f874c213d244522",
            "private_dns": "ip-10-10-50-108.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.50.108",
            "public_ip": "34.221.27.14",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ad5a596689922c6",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff5aec382f300af2",
            "tags": {
              "Name": "prod-us-west-2-prod-Public-Win"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-Public-Win"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a798d2812431c10e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "i-0ea18fb634a2740d6",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.oregon_allow_public_rdp_sg",
            "aws_subnet.oregon-public-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "oregon-EC2-2-private-linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-096f5760b00bcd95c",
            "arn": "arn:aws:ec2:us-west-2:854069375893:instance/i-0b754c82dc3055be0",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b754c82dc3055be0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-west-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05dae2724ccd72688"
              }
            ],
            "primary_network_interface_id": "eni-05dae2724ccd72688",
            "private_dns": "ip-10-10-101-192.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.101.192",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f6ee1ff5a9df67df",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0024ea3a039b81cd0",
            "tags": {
              "Name": "prod-us-west-2-prod-Private-Linux"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-Private-Linux"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-03f45e34c8b45803b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "i-0b754c82dc3055be0",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.oregon_allow_private_rdp_ssh_http_sg",
            "aws_subnet.oregon-private-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "n_virginia_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854069375893:internet-gateway/igw-0b41bd2375b1fc0da",
            "id": "igw-0b41bd2375b1fc0da",
            "owner_id": "854069375893",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-us-east-1-prod-igw"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-igw"
            },
            "vpc_id": "vpc-02c7c5bced44b1213"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "igw-0b41bd2375b1fc0da",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.second-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "oregon_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:854069375893:internet-gateway/igw-02b03a0e241884b56",
            "id": "igw-02b03a0e241884b56",
            "owner_id": "854069375893",
            "region": "us-west-2",
            "tags": {
              "Name": "prod-us-west-2-prod-igw"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-igw"
            },
            "vpc_id": "vpc-035c2761317ab0182"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "igw-02b03a0e241884b56",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "n_virginia_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6efe5fa1da42e1a",
            "association_id": "eipassoc-0f2b7850da3696517",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-035a6ab6986c12e2b",
            "network_interface_id": "eni-0bf4a40e42560f314",
            "private_ip": "10.11.50.60",
            "public_ip": "52.70.190.102",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-005cb62d870197420",
            "tags": {
              "Name": "prod-us-east-1-prod-nat"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-nat"
            },
            "vpc_id": "vpc-02c7c5bced44b1213"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "nat-035a6ab6986c12e2b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.n_virginia_nat",
            "aws_internet_gateway.n_virginia_public",
            "aws_subnet.n_virginia-public-subnet",
            "aws_vpc.second-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "oregon_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06adcf3b6b85ec8ed",
            "association_id": "eipassoc-02b30fae9a1f61a78",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0952d30b97b6fc3e5",
            "network_interface_id": "eni-0c60c07973b693199",
            "private_ip": "10.10.50.50",
            "public_ip": "35.83.101.108",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ff5aec382f300af2",
            "tags": {
              "Name": "prod-us-west-2-prod-nat"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-nat"
            },
            "vpc_id": "vpc-035c2761317ab0182"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "nat-0952d30b97b6fc3e5",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_eip.oregon_nat",
            "aws_internet_gateway.oregon_public",
            "aws_subnet.oregon-public-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "n_virginia_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854069375893:route-table/rtb-08402160a3913e383",
            "id": "rtb-08402160a3913e383",
            "owner_id": "854069375893",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-035a6ab6986c12e2b",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-us-east-1-prod-Private-RT"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c7c5bced44b1213"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "rtb-08402160a3913e383",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.n_virginia_nat",
            "aws_internet_gateway.n_virginia_public",
            "aws_nat_gateway.n_virginia_nat",
            "aws_subnet.n_virginia-public-subnet",
            "aws_vpc.second-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "n_virginia_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854069375893:route-table/rtb-03e6cadb2752c5c9c",
            "id": "rtb-03e6cadb2752c5c9c",
            "owner_id": "854069375893",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b41bd2375b1fc0da",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-us-east-1-prod-Public-RT"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c7c5bced44b1213"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "rtb-03e6cadb2752c5c9c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.n_virginia_public",
            "aws_vpc.second-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "oregon_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:854069375893:route-table/rtb-034551b3c48420e20",
            "id": "rtb-034551b3c48420e20",
            "owner_id": "854069375893",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0952d30b97b6fc3e5",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-us-west-2-prod-Private-RT"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-035c2761317ab0182"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "rtb-034551b3c48420e20",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_eip.oregon_nat",
            "aws_internet_gateway.oregon_public",
            "aws_nat_gateway.oregon_nat",
            "aws_subnet.oregon-public-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "oregon_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:854069375893:route-table/rtb-0cb4edb235262cc05",
            "id": "rtb-0cb4edb235262cc05",
            "owner_id": "854069375893",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b03a0e241884b56",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-us-west-2-prod-Public-RT"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-035c2761317ab0182"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "rtb-0cb4edb235262cc05",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.oregon_public",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "n_virginia_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054b63ad1aca2d5ad",
            "region": "us-east-1",
            "route_table_id": "rtb-08402160a3913e383",
            "subnet_id": "subnet-0ce8b0ae6bb87516f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "rtbassoc-054b63ad1aca2d5ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.n_virginia_nat",
            "aws_internet_gateway.n_virginia_public",
            "aws_nat_gateway.n_virginia_nat",
            "aws_route_table.n_virginia_private",
            "aws_subnet.n_virginia-private-subnet",
            "aws_subnet.n_virginia-public-subnet",
            "aws_vpc.second-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062e9c1581165d941",
            "region": "us-east-1",
            "route_table_id": "rtb-08402160a3913e383",
            "subnet_id": "subnet-0e0b76c5e7a93bdbd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "rtbassoc-062e9c1581165d941",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.n_virginia_nat",
            "aws_internet_gateway.n_virginia_public",
            "aws_nat_gateway.n_virginia_nat",
            "aws_route_table.n_virginia_private",
            "aws_subnet.n_virginia-private-subnet",
            "aws_subnet.n_virginia-public-subnet",
            "aws_vpc.second-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "n_virginia_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da040c358be99ca2",
            "region": "us-east-1",
            "route_table_id": "rtb-03e6cadb2752c5c9c",
            "subnet_id": "subnet-005cb62d870197420"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "rtbassoc-0da040c358be99ca2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.n_virginia_public",
            "aws_route_table.n_virginia_public",
            "aws_subnet.n_virginia-public-subnet",
            "aws_vpc.second-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012434069a298868d",
            "region": "us-east-1",
            "route_table_id": "rtb-03e6cadb2752c5c9c",
            "subnet_id": "subnet-020d13c5528037467"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "rtbassoc-012434069a298868d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.n_virginia_public",
            "aws_route_table.n_virginia_public",
            "aws_subnet.n_virginia-public-subnet",
            "aws_vpc.second-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f325b212d971b158",
            "region": "us-east-1",
            "route_table_id": "rtb-03e6cadb2752c5c9c",
            "subnet_id": "subnet-067c69ca0cce35121"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "rtbassoc-0f325b212d971b158",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.n_virginia_public",
            "aws_route_table.n_virginia_public",
            "aws_subnet.n_virginia-public-subnet",
            "aws_vpc.second-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "oregon_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0534a50cce3c20de0",
            "region": "us-west-2",
            "route_table_id": "rtb-034551b3c48420e20",
            "subnet_id": "subnet-0024ea3a039b81cd0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "rtbassoc-0534a50cce3c20de0",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_eip.oregon_nat",
            "aws_internet_gateway.oregon_public",
            "aws_nat_gateway.oregon_nat",
            "aws_route_table.oregon_private",
            "aws_subnet.oregon-private-subnet",
            "aws_subnet.oregon-public-subnet",
            "aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b09226eb580cfba7",
            "region": "us-west-2",
            "route_table_id": "rtb-034551b3c48420e20",
            "subnet_id": "subnet-062f5eefd3a310683"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "rtbassoc-0b09226eb580cfba7",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_eip.oregon_nat",
            "aws_internet_gateway.oregon_public",
            "aws_nat_gateway.oregon_nat",
            "aws_route_table.oregon_private",
            "aws_subnet.oregon-private-subnet",
            "aws_subnet.oregon-public-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "oregon_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb10de540d5e9b3b",
            "region": "us-west-2",
            "route_table_id": "rtb-0cb4edb235262cc05",
            "subnet_id": "subnet-0ff5aec382f300af2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "rtbassoc-0fb10de540d5e9b3b",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.oregon_public",
            "aws_route_table.oregon_public",
            "aws_subnet.oregon-public-subnet",
            "aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060788cb64f79814d",
            "region": "us-west-2",
            "route_table_id": "rtb-0cb4edb235262cc05",
            "subnet_id": "subnet-07b9dc19f4ed0a198"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "rtbassoc-060788cb64f79814d",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.oregon_public",
            "aws_route_table.oregon_public",
            "aws_subnet.oregon-public-subnet",
            "aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcda122507857a90",
            "region": "us-west-2",
            "route_table_id": "rtb-0cb4edb235262cc05",
            "subnet_id": "subnet-0150fdf7faa23c2f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "rtbassoc-0dcda122507857a90",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.oregon_public",
            "aws_route_table.oregon_public",
            "aws_subnet.oregon-public-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "n_virginia_allow_public_rdp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854069375893:security-group/sg-09dd3eaeeaf7ac01d",
            "description": "Allow RDP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09dd3eaeeaf7ac01d",
            "ingress": [
              {
                "cidr_blocks": [
                  "34.221.27.14/32"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "prod-us-east-1-prod-allow_rdp_sg",
            "name_prefix": "",
            "owner_id": "854069375893",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-us-east-1-prod-allow_rdp_sg"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-allow_rdp_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c7c5bced44b1213"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "sg-09dd3eaeeaf7ac01d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.oregon-EC2-1-public",
            "aws_security_group.oregon_allow_public_rdp_sg",
            "aws_subnet.oregon-public-subnet",
            "aws_vpc.main-vpc",
            "aws_vpc.second-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "n_virginia_allow_public_ssh_http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854069375893:security-group/sg-042b8872107c6fd7f",
            "description": "Allow SSH, and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042b8872107c6fd7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.21.50.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.21.50.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-us-east-1-prod-allow_ssh_http_sg",
            "name_prefix": "",
            "owner_id": "854069375893",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-us-east-1-prod-allow_ssh_http_sg"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-allow_ssh_http_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c7c5bced44b1213"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "sg-042b8872107c6fd7f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.second-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oregon_allow_private_rdp_ssh_http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:854069375893:security-group/sg-03f45e34c8b45803b",
            "description": "Allow RDP, SSH, and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f45e34c8b45803b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.50.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.20.50.0/24"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.20.50.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-us-west-2-prod-allow_rdp_ssh_http_sg",
            "name_prefix": "",
            "owner_id": "854069375893",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-us-west-2-prod-allow_rdp_ssh_http_sg"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-allow_rdp_ssh_http_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-035c2761317ab0182"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "sg-03f45e34c8b45803b",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oregon_allow_public_rdp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:854069375893:security-group/sg-0a798d2812431c10e",
            "description": "Allow RDP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a798d2812431c10e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "prod-us-west-2-prod-allow_rdp_sg",
            "name_prefix": "",
            "owner_id": "854069375893",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-us-west-2-prod-allow_rdp_sg"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-allow_rdp_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-035c2761317ab0182"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "sg-0a798d2812431c10e",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "n_virginia-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854069375893:subnet/subnet-0ce8b0ae6bb87516f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.11.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce8b0ae6bb87516f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854069375893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-us-east-1-prod-Private-101-Subnet"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-Private-101-Subnet"
            },
            "vpc_id": "vpc-02c7c5bced44b1213"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "subnet-0ce8b0ae6bb87516f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.second-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854069375893:subnet/subnet-0e0b76c5e7a93bdbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.11.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0b76c5e7a93bdbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854069375893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-us-east-1-prod-Private-102-Subnet"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-Private-102-Subnet"
            },
            "vpc_id": "vpc-02c7c5bced44b1213"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "subnet-0e0b76c5e7a93bdbd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.second-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "n_virginia-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854069375893:subnet/subnet-005cb62d870197420",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.11.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005cb62d870197420",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854069375893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-us-east-1-prod-Public-Subnet"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-Public-Subnet"
            },
            "vpc_id": "vpc-02c7c5bced44b1213"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "subnet-005cb62d870197420",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.second-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854069375893:subnet/subnet-020d13c5528037467",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.11.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020d13c5528037467",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854069375893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-us-east-1-prod-Public-Subnet"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-Public-Subnet"
            },
            "vpc_id": "vpc-02c7c5bced44b1213"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "subnet-020d13c5528037467",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.second-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854069375893:subnet/subnet-067c69ca0cce35121",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.11.52.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067c69ca0cce35121",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854069375893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-us-east-1-prod-Public-Subnet"
            },
            "tags_all": {
              "Name": "prod-us-east-1-prod-Public-Subnet"
            },
            "vpc_id": "vpc-02c7c5bced44b1213"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "subnet-067c69ca0cce35121",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.second-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "oregon-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:854069375893:subnet/subnet-0024ea3a039b81cd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0024ea3a039b81cd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854069375893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "prod-us-west-2-prod-Private-101-Subnet"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-Private-101-Subnet"
            },
            "vpc_id": "vpc-035c2761317ab0182"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "subnet-0024ea3a039b81cd0",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:854069375893:subnet/subnet-062f5eefd3a310683",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062f5eefd3a310683",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854069375893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "prod-us-west-2-prod-Private-102-Subnet"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-Private-102-Subnet"
            },
            "vpc_id": "vpc-035c2761317ab0182"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "subnet-062f5eefd3a310683",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "oregon-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:854069375893:subnet/subnet-0ff5aec382f300af2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff5aec382f300af2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854069375893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "prod-us-west-2-prod-Public-Subnet"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-Public-Subnet"
            },
            "vpc_id": "vpc-035c2761317ab0182"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "subnet-0ff5aec382f300af2",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:854069375893:subnet/subnet-07b9dc19f4ed0a198",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b9dc19f4ed0a198",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854069375893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "prod-us-west-2-prod-Public-Subnet"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-Public-Subnet"
            },
            "vpc_id": "vpc-035c2761317ab0182"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "subnet-07b9dc19f4ed0a198",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:854069375893:subnet/subnet-0150fdf7faa23c2f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.52.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0150fdf7faa23c2f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854069375893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "prod-us-west-2-prod-Public-Subnet"
            },
            "tags_all": {
              "Name": "prod-us-west-2-prod-Public-Subnet"
            },
            "vpc_id": "vpc-035c2761317ab0182"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "subnet-0150fdf7faa23c2f8",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:854069375893:vpc/vpc-035c2761317ab0182",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0c981acb95ec59053",
            "default_route_table_id": "rtb-035e252af4de365cc",
            "default_security_group_id": "sg-05e136d2e0c83867c",
            "dhcp_options_id": "dopt-06f491c3c9090de6f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-035c2761317ab0182",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-035e252af4de365cc",
            "owner_id": "854069375893",
            "region": "us-west-2",
            "tags": {
              "Env": "prod",
              "Name": "prod-us-west-2-prod-VPC"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-us-west-2-prod-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "vpc-035c2761317ab0182",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "second-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854069375893:vpc/vpc-02c7c5bced44b1213",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-059bf3fb7167b3e87",
            "default_route_table_id": "rtb-07a01b7a352730220",
            "default_security_group_id": "sg-0f8bc4c03429be8a8",
            "dhcp_options_id": "dopt-08a09d672e16d2e9e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c7c5bced44b1213",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a01b7a352730220",
            "owner_id": "854069375893",
            "region": "us-east-1",
            "tags": {
              "Env": "prod",
              "Name": "prod-us-east-1-prod-VPC"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-us-east-1-prod-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854069375893",
            "id": "vpc-02c7c5bced44b1213",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}